Remediated SonarQube bugs, vulnerabilities, code smells, and security hotspots across all files to achieve a perfect 'A' rating.