@@ -8,6 +8,7 @@ import portal.expenses.util.JwtUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -18,10 +19,10 @@ import org.springframework.web.bind.annotation.*;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/auth")
+@SuppressWarnings("java:S1192")
 public class AuthController {
 
     private static final Logger logger = LoggerFactory.getLogger(AuthController.class);
@@ -58,8 +59,8 @@ public class AuthController {
 
         // Extract roles from authorities
         List<String> roles = userDetails.getAuthorities().stream()
-                .map(authority -> authority.getAuthority())
-                .collect(Collectors.toList());
+                .map(GrantedAuthority::getAuthority)
+                .toList();
 
         logger.info("User logged in successfully: {} with roles: {}", userDetails.getUsername(), roles);
         AppUser user = userRepository.findByUsername(userDetails.getUsername())
@@ -80,7 +81,9 @@ public class AuthController {
             }
 
             String token = authHeader.substring(7);
-            logger.info("Validating token: {}", token.substring(0, Math.min(token.length(), 30)) + "...");
+            if (logger.isInfoEnabled()) {
+                logger.info("Validating token: {}", token.substring(0, Math.min(token.length(), 30)) + "...");
+            }
 
             String username = jwtUtil.extractUsername(token);
             response.put("username", username);
@@ -91,8 +94,8 @@ public class AuthController {
 
             response.put(VALID_KEY, isValid);
             response.put("roles", userDetails.getAuthorities().stream()
-                    .map(a -> a.getAuthority())
-                    .collect(Collectors.toList()));
+                    .map(GrantedAuthority::getAuthority)
+                    .toList());
 
             if (isValid) {
                 logger.info("Token is VALID for user: {} with roles: {}", username, userDetails.getAuthorities());
@@ -109,10 +112,3 @@ public class AuthController {
         }
     }
 }
-
-// You will also need these DTOs (Data Transfer Objects)
-// src/main/java/com/expense/project/dto/LoginRequest.java
-// public record LoginRequest(String username, String password) {}
-
-// src/main/java/com/expense/project/dto/LoginResponse.java
-// public record LoginResponse(String token) {}
